# timeclock-mcp

./: AGENT.md  Cargo.toml  SECURITY_AUDIT.md
docs/: spec.md
src/: error.rs  main.rs  models.rs  server.rs  storage.rs  test_helpers.rs  tools.rs  transport.rs
src/operations/: clock_in.rs  clock_out.rs  mod.rs  project_delete.rs  project_list.rs  project_upsert.rs  session_add_note.rs  session_correct.rs  session_delete.rs  session_get_active.rs  session_query.rs
