[package]
name = "timeclock-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
